--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,59 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+    // padding-top: 70px;
+}
+
+main {
+    background-image: image-url("body_background.jpg");
+}
+
+div.welcome {
+    padding-top: 20px;
+}
+
+div.plans .btn {
+    background-color: #91787A;
+    background-image: none;
+}
+
+#welcome h1 {
+    color: #A00902;
+}
+
+header * {
+    color: #D7AEB1 !important;
+    font-size: 20px;
+}
+
+.home-logo {
+    width: 100px;
+}
+
+@font-face {
+    font-family: 'quentincaps';
+    src: font-url('quentincaps-webfont.eot');
+    src: font-url('quentincaps-webfont.eot?iefix') format('eot'),
+       font-url('quentincaps-webfont.woff') format('woff'),
+       font-url('quentincaps-webfont.ttf') format('truetype'),
+       font-url('quentincaps-webfont.svg#webfont3AwWkQXK') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+#welcome > h1 {
+    font-family: 'quentincaps';
+    font-size: 50px;
+}
+
+.plans div.well h2 {
+    font-family: 'quentincaps';
+    color: #A00902;
+}
+
+div.well {
+// //     background-color: #777;
+    border-color: #A00902;
+}
