--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -7,34 +7,55 @@
     <%= link_to 'Download PDF', products_path('product.pdf'), class: 'btn btn-success btn-large' %>
   <% end %>
 <% else %>
-  <div id="welcome" class="span7">
-    <h1>Membership Site</h1>
-    <h3>Learn to build a successful subscription site.</h3>
+  <div class="welcome row">
+    <div class="col-sm-12">
+      <div class="well">
+        <div id="welcome" class="span7">
+          <h1>West Coast Cigars Membership</h1>
+          <h3>Join the elite West Coast Club and gain all the perks.</h3>
+          <h5>Now with the new Espinoza Lounge.</h5>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="row col-sm-12 plans">
-    <div class="col-sm-2 well">
-      <div class="plan"><h2>Silver</h2></div>
-      <ul class="list-unstyled">
-        <li>One lesson a month</li>
-      </ul>
-      <h3>$9/month</h3>
-      <%= link_to 'Subscribe', new_user_registration_path(plan: 'silver'), :class => 'btn btn-primary' %>
-    </div>
-    <div class="col-sm-2 well featured">
-      <div class="plan featured-plan"><h2>Gold</h2></div>
-      <ul class="list-unstyled">
-        <li>Ten lessons a month</li>
-      </ul>
-      <h3>$19/month</h3>
-      <%= link_to 'Subscribe', new_user_registration_path(plan: 'gold'), :class => 'btn btn-primary' %>
-    </div>
-    <div class="col-sm-2 well">
-      <div class="plan"><h2>Platinum</h2></div>
-      <ul class="list-unstyled">
-        <li>Thirty lessons a month</li>
-      </ul>
-      <h3>$29/month</h3>
-      <%= link_to 'Subscribe', new_user_registration_path(plan: 'platinum'), :class => 'btn btn-primary' %>
+  <div class="row plans">
+    <div class="col-sm-12">
+      <div class="col-sm-4">
+        <div class="well">
+          <div><h2>Glass Tube</h2></div>
+          <ul class="list-unstyled">
+            <li>Access to membership pre-event gatherins</li>
+            <li>1 Cigar of the month</li>
+          </ul>
+          <h3>$9/month</h3>
+          <%= link_to 'Subscribe', new_user_registration_path(plan: 'silver'), :class => 'btn btn-primary' %>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="well featured">
+          <div><h2>Herfador</h2></div>
+          <ul class="list-unstyled">
+            <li>Access to the Espinoza lounge</li>
+            <li>Access to membership pre-event gatherins</li>
+            <li>2 different cigars of the month</li>
+          </ul>
+          <h3>$29/month</h3>
+          <%= link_to 'Subscribe', new_user_registration_path(plan: 'gold'), :class => 'btn btn-primary' %>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="well">
+          <div><h2>Humidor</h2></div>
+          <ul class="list-unstyled">
+            <li>Access to the Espinoza lounge</li>
+            <li>5 different premium hand picked cigars per month</li>
+            <li>Option to get personal humidified locker</li>
+            <li>10% additional off all purchases</li>
+          </ul>
+          <h3>$49/month</h3>
+          <%= link_to 'Subscribe', new_user_registration_path(plan: 'platinum'), :class => 'btn btn-primary' %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
