Update about and make spelling correction

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,26 @@
 <% content_for :title do %>About<% end %>
-<h3>About the Website</h3>
+<h2 class="red-header">About West Coast Cigars</h2>
+
 <p>
-This web application was created with
-<%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %>
-from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>.
+  Tobacconist offering cigars, pipes &amp; accessories, with a lounge featuring gaming tables &amp; TVs.
+</p>
+
+<h3 class="red-header">Members Only Espinoza Lounge</h3>
+
+<p>
+  Northern California's premier Espinoza Lounge, Complete with 7 Flat Screen TVs, 10 Person Poker Table, Domino Table and plenty of comfy leather chairs. Get out of the rain &amp; cold and into our lounge where you can sit back, relax and enjoy a great cigar with some other great people!
+</p>
+<p>
+  Phone (408) 283-9323<br/>
+  Address 1650 Almaden Road, San Jose, CA 95125
+</p>
+
+<h3 class="red-header">Operating Hours</h3>
+<p>
+  Sunday - Thursday<br/>
+  10 AM - 10 PM
+</p>
+<p>
+  Friday - Saturday<br/>
+  10 AM - Midnight
 </p>
