--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -24,10 +24,10 @@
         <div class="well">
           <div><h2>Glass Tube</h2></div>
           <ul class="list-unstyled">
-            <li>Access to membership pre-event gatherins</li>
+            <li>Access to membership pre-event gatherings</li>
             <li>1 Cigar of the month</li>
           </ul>
-          <h3>$9/month</h3>
+          <h3>$9/mo</h3>
           <%= link_to 'Subscribe', new_user_registration_path(plan: 'silver'), :class => 'btn btn-primary' %>
         </div>
       </div>
@@ -36,10 +36,10 @@
           <div><h2>Herfador</h2></div>
           <ul class="list-unstyled">
             <li>Access to the Espinoza lounge</li>
-            <li>Access to membership pre-event gatherins</li>
+            <li>Access to membership pre-event gatherings</li>
             <li>2 different cigars of the month</li>
           </ul>
-          <h3>$29/month</h3>
+          <h3>$29/mo</h3>
           <%= link_to 'Subscribe', new_user_registration_path(plan: 'gold'), :class => 'btn btn-primary' %>
         </div>
       </div>
@@ -48,11 +48,12 @@
           <div><h2>Humidor</h2></div>
           <ul class="list-unstyled">
             <li>Access to the Espinoza lounge</li>
+            <li>Access to membership pre-event gatherings</li>
             <li>5 different premium hand picked cigars per month</li>
             <li>Option to get personal humidified locker</li>
             <li>10% additional off all purchases</li>
           </ul>
-          <h3>$49/month</h3>
+          <h3>$49/mo</h3>
           <%= link_to 'Subscribe', new_user_registration_path(plan: 'platinum'), :class => 'btn btn-primary' %>
         </div>
       </div>
