--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,13 +26,13 @@ div.welcome {
     padding-top: 20px;
 }
 
-div.plans .btn {
+div.plans .btn, .authform .btn {
     background-color: #91787A;
     background-image: none;
 }
 
 #welcome h1 {
-    color: #A00902;
+    color: #b51e1e;
 }
 
 header * {
@@ -62,14 +62,23 @@ header * {
 
 .plans div.well h2 {
     font-family: 'quentincaps';
-    color: #A00902;
+    color: #8C2728;
 }
 
 div.well {
 // //     background-color: #777;
-    border-color: #A00902;
+    border-color: #8C2728;
 }
 
 .red-header {
-    color: #A00902;
+    color: #8C2728;
+}
+
+.espinoza-logo {
+    width: 200px;
+    filter: none;
+    -webkit-filter:brightness(50%);
+    -moz-filter:brightness(50%);
+    filter: url(#brightness); /* required for FF */
+    filter:brightness(50%);
 }
