--- a/app/views/user_mailer/expire_email.text.erb
+++ b/app/views/user_mailer/expire_email.text.erb
@@ -3,4 +3,4 @@ Subscription Cancelled
 Your subscription has been cancelled.
 
 We are sorry to see you go. We'd love to have you back.
-Visit example.com anytime to create a new subscription.
+Visit www.westcoastcigars.com anytime to create a new subscription.
