--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,26 +1,39 @@
 <% content_for :title do %>About<% end %>
-<h2 class="red-header">About West Coast Cigars</h2>
+<div cl>
+  <div class="col-sm-10">
+    <div class="well">
+      <h2 class="red-header">About West Coast Cigars</h2>
+      <p>
+        Tobacconist offering cigars, pipes &amp; accessories, with a lounge featuring gaming tables &amp; TVs.
+      </p>
+    </div>
+  </div>
 
-<p>
-  Tobacconist offering cigars, pipes &amp; accessories, with a lounge featuring gaming tables &amp; TVs.
-</p>
+  <div class="col-sm-10">
+    <div class="well">
+      <h3 class="red-header">Members Only Espinoza Lounge</h3>
 
-<h3 class="red-header">Members Only Espinoza Lounge</h3>
+      <p>
+        Northern California's premier Espinoza Lounge, Complete with 7 Flat Screen TVs, 10 Person Poker Table, Domino Table and plenty of comfy leather chairs. Get out of the rain &amp; cold and into our lounge where you can sit back, relax and enjoy a great cigar with some other great people!
+      </p>
+      <p>
+        Phone (408) 283-9323<br/>
+        Address 1650 Almaden Road, San Jose, CA 95125
+      </p>
+    </div>
+  </div>
 
-<p>
-  Northern California's premier Espinoza Lounge, Complete with 7 Flat Screen TVs, 10 Person Poker Table, Domino Table and plenty of comfy leather chairs. Get out of the rain &amp; cold and into our lounge where you can sit back, relax and enjoy a great cigar with some other great people!
-</p>
-<p>
-  Phone (408) 283-9323<br/>
-  Address 1650 Almaden Road, San Jose, CA 95125
-</p>
-
-<h3 class="red-header">Operating Hours</h3>
-<p>
-  Sunday - Thursday<br/>
-  10 AM - 10 PM
-</p>
-<p>
-  Friday - Saturday<br/>
-  10 AM - Midnight
-</p>
+  <div class="col-sm-10">
+    <div class="well">
+      <h3 class="red-header">Operating Hours</h3>
+      <p>
+        Sunday - Thursday<br/>
+        10 AM - 10 PM
+      </p>
+      <p>
+        Friday - Saturday<br/>
+        10 AM - Midnight
+      </p>
+    </div>
+  </div>
+</div>
