Add design to couple of views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,12 +28,8 @@ div.plans .btn, .authform .btn {
     background-image: none;
 }
 
-#welcome h1 {
+#welcome h1, .authform h3, div.well h3 {
     color: #b51e1e;
-}
-
-.authform h3 {
-  color: #b51e1e;
 }
 
 header * {
