--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,7 @@ div.authform form, .well {
 
 div.plans .btn, .authform .btn {
     background-color: #91787A;
+    color: #FFFFFF;
     background-image: none;
 }
 
