--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "Rails Stripe Membership" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Rails Stripe Membership" %>">
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_include_tag "http://maps.google.com/maps/api/js", extname: false %>
+    <%= javascript_include_tag "https://maps.google.com/maps/api/js", extname: false %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
